--- a/src/styles/sassModules/_weatherCard.scss
+++ b/src/styles/sassModules/_weatherCard.scss
@@ -4,7 +4,7 @@
   display: grid;
   background-color: $white;
   color: $font-p-color-secondary;
-  place-content: center;
+  place-items: center;
   width: 40vh;
   padding: 1vh;
   border-radius: 10px;
