Fix: search button was covered by default border

--- a/src/styles/sassModules/_mainPage.scss
+++ b/src/styles/sassModules/_mainPage.scss
@@ -43,6 +43,7 @@
   
 }
 .search-btn{
+  border: 0;
   color: $font-title;
   background-color: $font-title;
   -webkit-mask-image: url(../../imgs/lupa.svg) ;
